<resources>
    <string name="app_name">Super Formulario Binding</string>
    <string name="ingrese_datos">Ingrese Datos</string>
    <string name="ingrese_nombre">Ingrese Nombre</string>
    <string name="ingrese_correo">Ingrese Correo</string>
    <string name="ingrese_edad">Ingrese Edad</string>
    <string name="guardar_datos">Guardar Datos</string>
    <array name="peliculas">
        <item>Ghost</item>
        <item>El silencio de los inocentes</item>
    </array>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tab_text_4">Tab 4</string>
</resources>